Bert embed fix (#177)
* matches upstream tolerance

* add tensor plan